# materialxMaterials

./: .gitignore  README.html  README.md  index.html  myserver.py  pyproject.toml  pyvenv.bat
.github/workflows/: static.yml
docs/: Doxyfile
docs/html/: _g_p_u_open_loader_8py_source.html  _g_p_u_open_loader_cmd_8py_source.html  annotated.html  annotated_dup.js  class_g_p_u_open_loader_1_1_g_p_u_open_material_loader-members.html  class_g_p_u_open_loader_1_1_g_p_u_open_material_loader.html  class_g_p_u_open_loader_1_1_g_p_u_open_material_loader.js  classes.html  classphysically_based_material_x_1_1_physically_based_material_loader.html  classphysically_based_material_x_1_1_physically_based_material_loader.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ed2309c38062a0ffa21222134f4047e1.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  md__d___work_materialx_materialx_materials__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  physically_based_material_x_8py.html  physically_based_material_x_cmd_8py_source.html
documents/: Doxyfile  log.txt
documents/html/: ____init_____8py_source.html  ____main_____8py_source.html  annotated.html  (+82 more)
examples/: PhysicallyBasedMaterialX_GLTF.mtlx.glb  PhysicallyBasedMaterialX_GLTF.mtlx.gltf  README.html  README.md  index.html  materialxMaterials_tutorial.py  materialxMaterials_tutorial_out_iframe.html
javascript/: JsGPUOpenLoader.js  JsMaterialXPhysicallyBased.js  gpuOpenFetch.js  testGPU.html
utilities/: build.bat  buildDocs.bat  footer.html  mdhtml.py  renderView.py  template.html
(+304 files in other folders)
