[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "materialxMaterials"
version = "0.0.1"
authors = [
  { name="Bernard Kwok", email="kwokcb@gmail.com" },
]
description = "Utilities to get materials stored on a remote server"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "materialx>=1.39",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"materialxMaterials.data" = ["*.*"]

[project.urls]
"Homepage" = "https://kwokcb.github.io/materialxMaterials/"
"Issues" = "https://github.com/kwokcb/materialxMaterials/issues"
"Source Code" = "https://github.com/kwokcb/materialxMaterials"
"Documentation" = "https://kwokcb.github.io/materialxMaterials/"

